--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
     "seed:admin": "tsx scripts/seed-admin.ts"
   },
   "dependencies": {
